force-app/main/default/objects/cogn__Report_Data__c/cogn__Report_Data__c.object-meta.xml
<CustomObject>
    <label>Report Data</label>
    <nameField>
        <label>Report Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Report Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>