force-app/main/default/objects/cogn__Report_Data__c/fields/cogn__Count_Company_Changes_Applied__c.field-meta.xml
<CustomField>
    <fullName>cogn__Count_Company_Changes_Applied__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Count Company Changes  Applied</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>