force-app/main/default/objects/cogn__Report_Data__c/fields/cogn__Count_Pushed_Records_To_Campaign__c.field-meta.xml
<CustomField>
    <fullName>cogn__Count_Pushed_Records_To_Campaign__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Count Pushed Records To Campaign</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>