force-app/main/default/objects/cogn__Report_Data__c/fields/cogn__End_Date__c.field-meta.xml
<CustomField>
    <fullName>cogn__End_Date__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>