force-app/main/default/objects/cogn__Report_Data__c/fields/cogn__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>cogn__Start_Date__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>