force-app/main/default/objects/cogn__Report_Data__c/fields/cogn__User__c.field-meta.xml
<CustomField>
    <fullName>cogn__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Report_Data</relationshipName>
    <type>Lookup</type>
</CustomField>