force-app/main/default/objects/cogn__Report_Data__c/listViews/cogn__All.listView-meta.xml
<ListView>
    <fullName>cogn__All</fullName>
    <columns>NAME</columns>
    <columns>cogn__Start_Date__c</columns>
    <columns>cogn__End_Date__c</columns>
    <columns>cogn__User__c</columns>
    <columns>cogn__Count_Saved_Records__c</columns>
    <columns>cogn__Count_Company_Changes_Detected__c</columns>
    <columns>cogn__Count_Job_Title_Changes_Detected__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>